# Streamlit-summarizer

./: .gitignore  README.md  app.py  pyproject.toml
